--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Pep Clock</h1>
     <div id="app" />
-    <script src="public/bundle.js" type="text/javascript"></script>
+    <script src="/bundle.js" type="text/javascript"></script>
   </body>
 </html>
